force-app/main/default/objects/Buyer__c/fields/Buyer_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Address_2__c</fullName>
    <description>Address Line 2 or Apt/Suite number</description>
    <inlineHelpText>Enter Address Line 2</inlineHelpText>
    <label>Buyer Address 2</label>
    <type>TextArea</type>
</CustomField>