force-app/main/default/objects/Buyer__c/fields/Buyer_Address__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Address__c</fullName>
    <description>Address Line 1</description>
    <inlineHelpText>Enter Address Line 1</inlineHelpText>
    <label>Buyer Address</label>
    <type>TextArea</type>
</CustomField>