force-app/main/default/objects/Buyer__c/fields/Buyer_City2__c.field-meta.xml
<CustomField>
    <fullName>Buyer_City2__c</fullName>
    <description>Buyer&apos;s City</description>
    <inlineHelpText>Enter the City of the Buyer</inlineHelpText>
    <label>Buyer City2</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>