force-app/main/default/objects/Buyer__c/fields/Buyer_City__c.field-meta.xml
<CustomField>
    <fullName>Buyer_City__c</fullName>
    <description>City of the Buyer</description>
    <inlineHelpText>Enter the City of the Buyer</inlineHelpText>
    <label>Buyer City</label>
    <length>25</length>
    <type>Text</type>
</CustomField>