force-app/main/default/objects/Buyer__c/fields/Buyer_Email__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Email__c</fullName>
    <description>Email id of the Buyer</description>
    <inlineHelpText>description chaduvko</inlineHelpText>
    <label>Buyer Email</label>
    <type>Email</type>
</CustomField>