force-app/main/default/objects/Buyer__c/fields/Buyer_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Phone_Number__c</fullName>
    <description>Contact Number of the Buyer</description>
    <label>Buyer Phone Number</label>
    <type>Phone</type>
</CustomField>