force-app/main/default/objects/Buyer__c/fields/Buyer_State__c.field-meta.xml
<CustomField>
    <fullName>Buyer_State__c</fullName>
    <description>Buyer&apos;s State</description>
    <inlineHelpText>Enter the state of the Buyer</inlineHelpText>
    <label>Buyer State</label>
    <length>25</length>
    <type>Text</type>
</CustomField>