force-app/main/default/objects/Buyer__c/fields/Buyer_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Zip_Code__c</fullName>
    <description>Buyer Zip Code</description>
    <inlineHelpText>Enter the Buyer Zip Code</inlineHelpText>
    <label>Buyer Zip Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>