force-app/main/default/objects/Buyer__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>The City of Interested Property location</description>
    <inlineHelpText>The City of Interested Property location</inlineHelpText>
    <label>City</label>
    <length>25</length>
    <type>Text</type>
</CustomField>