force-app/main/default/objects/Buyer__c/fields/Interested_Property__c.field-meta.xml
<CustomField>
    <fullName>Interested_Property__c</fullName>
    <description>The property in which the Buyer is interested in.</description>
    <label>Interested Property</label>
    <type>TextArea</type>
</CustomField>