force-app/main/default/objects/Buyer__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <description>The type of property/house the Buyer is interested in</description>
    <inlineHelpText>Buyer&apos;s Interested Property type</inlineHelpText>
    <label>Property Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Semi Detached</fullName>
            </value>
            <value>
                <fullName>Individual House</fullName>
            </value>
            <value>
                <fullName>Plot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>