force-app/main/default/objects/Buyer__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Interested Property State</description>
    <inlineHelpText>State in which Interested Property is present</inlineHelpText>
    <label>State</label>
    <length>25</length>
    <type>Text</type>
</CustomField>