force-app/main/default/objects/Buyer__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <description>Zip Code of Interested Property Location</description>
    <inlineHelpText>Zip Code of Interested Property Location</inlineHelpText>
    <label>Zip Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>